--- a/.github/workflows/pr-metadata-validation.yml
+++ b/.github/workflows/pr-metadata-validation.yml
@@ -1,27 +1,35 @@
-name: Validate Agenda Metadata
+name: PR Metadata Validation
 
 on:
   pull_request:
+    branches:
+      - main
     paths:
       - 'data/agendas/mainnet/*.json'
       - 'data/agendas/sepolia/*.json'
-      - 'src/types/agenda-metadata.ts'
-      - 'src/validators/validate-metadata.ts'
+  workflow_dispatch:
+    inputs:
+      network:
+        description: 'Network to validate (mainnet/sepolia)'
+        required: true
+        type: choice
+        options:
+          - mainnet
+          - sepolia
+      agenda_id:
+        description: 'Specific agenda ID to validate (optional)'
+        required: true
+        type: string
 
 jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm ci
-
+          node-version: '20'
+      - run: npm ci
       - name: Get changed agenda files
         id: changed-files
         uses: tj-actions/changed-files@v44
@@ -29,12 +37,27 @@ jobs:
           files: |
             data/agendas/mainnet/*.json
             data/agendas/sepolia/*.json
-
+      - name: Check number of changed files
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: |
+          CHANGED_FILES_COUNT=$(echo "${{ steps.changed-files.outputs.all_changed_files }}" | tr ' ' '\n' | wc -l)
+          if [ "$CHANGED_FILES_COUNT" -gt 1 ]; then
+            echo "Error: Only one agenda file can be changed at a time"
+            exit 1
+          fi
+      - name: Validate PR title
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: |
+          if ! echo "${{ github.event.pull_request.title }}" | grep -qE '^\[Agenda\] (mainnet|sepolia) - [0-9]+ - .+'; then
+            echo "Error: PR title must be in format '[Agenda] <network> - <agenda_id> - <agenda_title>'"
+            exit 1
+          fi
       - name: Validate changed agenda metadata files
         if: steps.changed-files.outputs.any_changed == 'true'
+        run: npm run validate
         env:
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
           SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
+          NETWORK: ${{ contains(steps.changed-files.outputs.all_changed_files, 'mainnet') && 'mainnet' || 'sepolia' }}
+          AGENDA_ID: ${{ github.event.inputs.agenda_id || '' }}
           PR_TITLE: ${{ github.event.pull_request.title }}
-        run: |
-          npx ts-node src/validators/validate-metadata.ts ${{ steps.changed-files.outputs.all_changed_files }}
