feat: improve environment variable handling
 Add conditional .env loading for local development
- Set NODE_ENV=production in CI workflow
- Support both local development and CI environments

This change allows:
- Local development: Uses .env file for environment variables
- CI environment: Uses GitHub Secrets
- Both environments work seamlessly

--- a/.github/workflows/pr-metadata-validation.yml
+++ b/.github/workflows/pr-metadata-validation.yml
@@ -57,6 +57,7 @@ jobs:
         if: steps.changed-files.outputs.any_changed == 'true'
         run: npm run validate
         env:
+          NODE_ENV: production
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
           SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
           NETWORK: ${{ contains(steps.changed-files.outputs.all_changed_files, 'mainnet') && 'mainnet' || 'sepolia' }}
