fix: update GitHub Actions automerge to use github-script
- Replace deprecated pascalgn/merge-action with actions/github-script
- Use direct GitHub REST API calls for more reliable auto-merge
- Fix ES module compatibility issues in abi-loader
- Add TypeScript type safety for transaction validation
- Install tsx dependency for validation scripts

--- a/.github/workflows/pr-metadata-validation.yml
+++ b/.github/workflows/pr-metadata-validation.yml
@@ -63,10 +63,33 @@ jobs:
 
       - name: Auto-merge PR
         if: steps.changed-files.outputs.any_changed == 'true'
-        uses: pascalgn/merge-action@v0.15.6
+        uses: actions/github-script@v7
+        continue-on-error: true
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          merge_method: squash
-          merge_commit_message: ${{ github.event.pull_request.title }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            console.log("🚀 All validations passed! Auto-merging PR...");
+
+            try {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.issue.number,
+                commit_title: "Auto-merge: " + context.payload.pull_request.title,
+                commit_message: "✅ All validations passed\n\n" +
+                               "- Schema validation: ✅\n" +
+                               "- Format validation: ✅\n" +
+                               "- PR title validation: ✅\n" +
+                               "- Time validation: ✅\n" +
+                               "- Signature validation: ✅\n" +
+                               "- Transaction validation: ✅\n\n" +
+                               "Automatically merged by GitHub Actions after successful validation.",
+                merge_method: "squash"
+              });
+
+              console.log("✅ PR successfully merged!");
+            } catch (error) {
+              console.log("⚠️ Auto-merge not available - this may require manual merge or additional repository permissions.");
+              console.log("Error details:", error.message);
+              console.log("All validations passed - the PR is ready for manual merge.");
+            }
