--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.3.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.3.3",
     "vitest": "^3.2.3"
   }
