fix: add immediate auto-merge to validation workflow
- Prevent timing issues between workflows
- Merge immediately after validation success
- Add detailed error handling and user feedback

--- a/.github/workflows/pr-metadata-validation.yml
+++ b/.github/workflows/pr-metadata-validation.yml
@@ -67,8 +67,42 @@ jobs:
           NODE_ENV: production
           PR_TITLE: ${{ github.event.pull_request.title }}
 
-      - name: Mark validation complete
+      - name: Auto-merge PR immediately
         if: steps.changed-files.outputs.any_changed == 'true'
-        run: |
-          echo "✅ All validations passed!"
-          echo "🚀 Auto-merge will be handled by separate workflow"
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            console.log("🚀 All validations passed! Auto-merging immediately...");
+
+            try {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.issue.number,
+                commit_title: `Auto-merge: ${{ github.event.pull_request.title }}`,
+                commit_message: `✅ Auto-merged after successful validation\n\nAll checks passed:\n- Schema validation ✅\n- Format validation ✅\n- PR title validation ✅\n- Time validation ✅\n- Signature validation ✅\n- Transaction validation ✅`,
+                merge_method: "squash"
+              });
+
+              console.log("✅ PR successfully auto-merged!");
+
+              // 성공 댓글
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `🎉 **Auto-merge successful!**\n\nThis PR has been automatically merged after all validations passed.\n\n✅ All checks completed successfully\n\nThank you for your contribution! 🚀`
+              });
+
+            } catch (error) {
+              console.log(`❌ Auto-merge failed: ${error.message}`);
+
+              // 실패 댓글
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `⚠️ **Auto-merge failed**\n\n**Reason**: ${error.message}\n\n✅ **All validations passed** - The PR is ready for manual merge!\n\nPlease merge manually when ready.`
+              });
+            }
