Fix YAML syntax error in internal test template
- Fix 'aassignees' typo to 'assignees' in 2-internal-test.yml
- This was preventing the internal test template from appearing in GitHub issue creation

--- a/.github/ISSUE_TEMPLATE/2-internal-test.yml
+++ b/.github/ISSUE_TEMPLATE/2-internal-test.yml
@@ -2,7 +2,7 @@ name: 🧪 Internal Test
 description: This is a internal test.
 title: "[Internal Test] "
 labels: [internal-test]
-aassignees:
+assignees:
   - Zena-park
 body:
   - type: markdown
