--- a/.github/ISSUE_TEMPLATE/2-internal-test.yml
+++ b/.github/ISSUE_TEMPLATE/2-internal-test.yml
@@ -1,7 +1,7 @@
 name: 🧪 Internal Test
 description: This is a internal test.
 title: "[Internal Test] "
-labels: [internal-test]
+labels: [internal-test, "needs-review"]
 assignees:
   - Zena-park
 body:
@@ -11,10 +11,6 @@ body:
         👋 **Thank you for reporting a bug!**
 
         Please provide detailed information below to help us resolve the issue quickly.
-
-        📋 **Related Documentation:**
-        - [Getting Started](https://github.com/tokamak-network/dao-agenda-metadata-repository/blob/main/docs/getting-started.md)
-        - [Test Guide](https://github.com/tokamak-network/dao-agenda-metadata-repository/blob/main/docs/test-guide.md)
 
   - type: dropdown
     id: bug-type
