Improve internal test template description
- Update description from 'This is a internal test.' to 'Report issues found during internal testing'
- Make template description more professional and descriptive

--- a/.github/ISSUE_TEMPLATE/2-internal-test.yml
+++ b/.github/ISSUE_TEMPLATE/2-internal-test.yml
@@ -1,5 +1,5 @@
 name: 🧪 Internal Test
-description: This is a internal test.
+description: Report issues found during internal testing
 title: "[Internal Test] "
 labels: [internal-test, "needs-review"]
 assignees:
