--- a/.github/ISSUE_TEMPLATE/1-internal-test.yml
+++ b/.github/ISSUE_TEMPLATE/1-internal-test.yml
@@ -1,7 +1,7 @@
-name: 🐛 Bug Report
-description: Report a bug or issue
-title: "[Bug] "
-labels: [bug, "needs-review"]
+name: 🧪 Internal Test
+description: Report issues found during internal testing
+title: "[Internal Test] "
+labels: [internal-test, "needs-review"]
 assignees:
   - Zena-park
 body:
@@ -75,7 +75,7 @@ body:
         3.
         4.
     validations:
-      required: true
+      required: false
 
   - type: textarea
     id: environment
@@ -121,3 +121,4 @@ body:
         **Additional Details:**
 
         **Attachments:**
+
