--- a/.github/ISSUE_TEMPLATE/2-issue-report.yml
+++ b/.github/ISSUE_TEMPLATE/2-issue-report.yml
@@ -1,7 +1,7 @@
-name: 🧪 Internal Test
-description: Report issues found during internal testing
-title: "[Internal Test] "
-labels: [internal-test, "needs-review"]
+name: 🐛 Bug/Issue Report
+description: Report a bug or issue
+title: "[BUG/ISSUE] "
+labels: [bug, "needs-review"]
 assignees:
   - Zena-park
 body:
@@ -75,7 +75,7 @@ body:
         3.
         4.
     validations:
-      required: true
+      required: false
 
   - type: textarea
     id: environment
@@ -121,4 +121,3 @@ body:
         **Additional Details:**
 
         **Attachments:**
-
